--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
 		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
 	}
 	repositories {
+		mavenLocal()
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
@@ -21,6 +22,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
@@ -29,7 +31,14 @@ repositories {
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-webflux')
+	compile('org.springframework.boot:spring-boot-starter-tomcat')
 	compile 'org.synchronoss.cloud:nio-multipart-parser:1.1.0'
+	compile 'org.springframework:spring-aop:5.0.0.BUILD-SNAPSHOT'
+	compile 'org.springframework:spring-beans:5.0.0.BUILD-SNAPSHOT'
+	compile 'org.springframework:spring-expression:5.0.0.BUILD-SNAPSHOT'
+	compile 'org.springframework:spring-core:5.0.0.BUILD-SNAPSHOT'
+	compile 'org.springframework:spring-web:5.0.0.BUILD-SNAPSHOT'
+	compile 'org.springframework:spring-webflux:5.0.0.BUILD-SNAPSHOT'
 	compile 'commons-io:commons-io:2.5'
 	compile ('org.apache.httpcomponents:httpclient:4.5.2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
